--- a/Image Map 3/Image Map 3.csproj
+++ b/Image Map 3/Image Map 3.csproj
@@ -101,7 +101,7 @@
     <Compile Include="LockBitmap.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapCreationSettings.cs" />
-    <Compile Include="Preview.cs" />
+    <Compile Include="Previews.cs" />
     <Compile Include="ReplaceOptionDialog.cs">
       <SubType>Form</SubType>
     </Compile>
