--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "zlib"]
 	path = zlib
-	url = https://github.com/tryashtar/zlib.git
 [submodule "leveldb-mcpe"]
 	path = leveldb-mcpe
-	url = https://github.com/tryashtar/leveldb-mcpe
+[submodule "fNbt"]
+	path = fNbt
